--- a/blazor-HTM-CSS-javascript/BlazorAppHTML/Shared/NavMenu.razor
+++ b/blazor-HTM-CSS-javascript/BlazorAppHTML/Shared/NavMenu.razor
@@ -29,6 +29,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Mi Pagina
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Formulario">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Formulario
+            </NavLink>
+        </div>
     </nav>
 </div>
 
