--- a/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor.css
+++ b/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor.css
@@ -35,17 +35,17 @@
     display: block;
 }
 
-@media (min-width: 641px) {
+@media (min-width: 992px) {
 
 
     .nav-scrollable {
         /* Never collapse the sidebar for wide screens */
         display: none;
-
-         Allow sidebar to scroll for tall menus 
+        /*         Allow sidebar to scroll for tall menus 
         height: calc(100vh - 3.5rem);
-        overflow-y: auto;
+        overflow-y: auto;*/
     }
+
     .navbar-toggler {
         display: none;
     }
