menu horizontal y vertical con botón funciona perfectamente con solo unas opciones de menu !!

--- a/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Pages/Home.razor
+++ b/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Pages/Home.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#confirmModal">   Eliminar Elemento  </button>
+<div class="modal fade" id="confirmModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmModalLabel">Confirmar Eliminación</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>¿Estás seguro de que deseas eliminar este elemento?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-danger">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
