--- a/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor
+++ b/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor
@@ -1,9 +1,11 @@
-﻿<nav class="navbar navbar-expand-lg bg-dark ">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
                 <div class="nav-item ">
                     <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                         Home
@@ -20,35 +22,8 @@
                     <NavLink class="nav-link" href="weather">
                         Weather
                     </NavLink>
-                </div>
-            </div>
-
-        </div>
+                </div>      
+          </ul>
     </div>
 </nav>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                 Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                 Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                 Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
 
