funciona perfectamente menu horizontal/vertical

--- a/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor
+++ b/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor
@@ -7,23 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
                 <div class="nav-item ">
-                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                        Home
-                    </NavLink>
-                </div>
-
-                <div class="nav-item ">
-                    <NavLink class="nav-link" href="counter">
-                        Counter
-                    </NavLink>
-                </div>
-
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All"> Home </NavLink>  </div>
+                <div class="nav-item "> 
+                    <NavLink class="nav-link" href="counter"> Counter   </NavLink>     </div>
                 <div class="nav-item">
-                    <NavLink class="nav-link" href="weather">
-                        Weather
-                    </NavLink>
-                </div>      
-          </ul>
+                    <NavLink class="nav-link" href="weather">  Weather  </NavLink>      </div>      
+        </ul>
     </div>
 </nav>
 
