--- a/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor
+++ b/HorizontalMenuBlazorApp/BlazorApp5/BlazorApp5/Components/Layout/NavMenu.razor
@@ -14,5 +14,6 @@
                     <NavLink class="nav-link" href="weather">  Weather  </NavLink>      </div>      
         </ul>
     </div>
+    </div>
 </nav>
 
