con apis protegidas

--- a/BlazorAppSecurity/BlazorApp/Components/Pages/Auth.razor
+++ b/BlazorAppSecurity/BlazorApp/Components/Pages/Auth.razor
@@ -13,7 +13,7 @@
 </AuthorizeView>
 
 <AuthorizeView Roles="Administrators">
-    Hello @context.User.Identity?.Name!
+    Hello administrator @context.User.Identity?.Name!
 </AuthorizeView>
 
 @* En la base de datos el rol es Administrators 
