gestion de usuarios

--- a/BlazorAppSecurity/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppSecurity/BlazorApp/Components/Layout/NavMenu.razor
@@ -66,6 +66,14 @@
                 </div>
             </NotAuthorized>
         </AuthorizeView>
+        <AuthorizeView Roles="Administrators">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="administration">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Administration
+                </NavLink>
+            </li>
+        </AuthorizeView>
+
     </nav>
 </div>
 
