--- a/BlazorAppSecurity/BlazorApp/Components/Pages/Weather.razor
+++ b/BlazorAppSecurity/BlazorApp/Components/Pages/Weather.razor
@@ -1,4 +1,7 @@
-﻿@page "/weather"
+﻿@using System.Net.Http
+@inject HttpClient Http
+@inject IHttpClientFactory ClientFactory
+@page "/weather"
 
 <PageTitle>Weather</PageTitle>
 
@@ -33,13 +36,32 @@ else
             }
         </tbody>
     </table>
+
+    <p class="text-black">@mensaje</p>
 }
 
 @code {
     private WeatherForecast[]? forecasts;
 
+
+    private string mensaje = "?";
+
     protected override async Task OnInitializedAsync()
     {
+        
+
+        var request = new HttpRequestMessage(HttpMethod.Get, @"https://localhost:7270/api/free");
+        var client = ClientFactory.CreateClient();
+        var response = await client.SendAsync(request);
+        if (response.IsSuccessStatusCode)
+        {
+            mensaje = await response.Content.ReadAsStringAsync();
+        }
+
+
+        
+
+
         // Simulate asynchronous loading to demonstrate a loading indicator
         await Task.Delay(500);
 
