leer datos desde la pai

--- a/BlazorAppSecurity/BlazorApp/Components/Pages/Auth.razor
+++ b/BlazorAppSecurity/BlazorApp/Components/Pages/Auth.razor
@@ -10,6 +10,7 @@
 
 <AuthorizeView>
     Hello @context.User.Identity?.Name!
+    @context.
 </AuthorizeView>
 
 <AuthorizeView Roles="Administrators">
