--- a/BlazorAppSecurity/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppSecurity/BlazorApp/Components/Layout/NavMenu.razor
@@ -31,10 +31,22 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="weatherAPI">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> WeatherAPI(secure)
+            </NavLink>
+        </div>
+
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
         </div>
+
+
+
+
+
 
         <AuthorizeView>
             <Authorized>
