--- a/BlazorEbi7EF/BlazorEbi9.WebAssembly/_Imports.razor
+++ b/BlazorEbi7EF/BlazorEbi9.WebAssembly/_Imports.razor
@@ -3,11 +3,13 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorEbi9.Web.Client
+@using BlazorEbi9.WebAssembly
+@using BlazorEbi9.WebAssembly.Shared
 @using BlazorEbi9.Data
 @using BlazorEbi9.Model.Entidades
 @using BlazorEbi9.Model.Interfaces
 @using BlazorEbi9.Model.IServices
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
