--- a/BlazorEbi7EF/BlazorAppEbi9/BlazorAppEbi9/Components/_Imports.razor
+++ b/BlazorEbi7EF/BlazorAppEbi9/BlazorAppEbi9/Components/_Imports.razor
@@ -6,9 +6,10 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorEbi9.Web
-@using BlazorEbi9.Web.Client
-@using BlazorEbi9.Web.Components 
+@using BlazorAppEbi9
+@using BlazorAppEbi9.Client
+@using BlazorAppEbi9.Components
+
 @using BlazorEbi9.Data
 @using BlazorEbi9.Model.Entidades
 @using BlazorEbi9.Model.Interfaces
