--- a/BlazorAppAuto/BlazorAppAuto/BlazorAppAuto.Client/Layout/NavMenu.razor
+++ b/BlazorAppAuto/BlazorAppAuto/BlazorAppAuto.Client/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorAppEbi9</a>
+        <a class="navbar-brand" href="">BlazorAppAuto</a>
     </div>
 </div>
 
@@ -21,14 +21,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ListaUsuarios">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Usuarios EF
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ListaUsuariosAPI">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lista Usuarios API
+            <NavLink class="nav-link" href="weather">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
     </nav>
