Error resuelt en proyecto blezorise

--- a/BlazorEbi9EF/BlazorEbi9.ServerBlazorise/Pages/ListaUsuarios.razor
+++ b/BlazorEbi9EF/BlazorEbi9.ServerBlazorise/Pages/ListaUsuarios.razor
@@ -55,7 +55,7 @@
        
         <DataGridDateColumn Field="@nameof(UsuarioSet.Id)" Caption="#"  Sortable="false" Displayable="true" />
         <DataGridColumn  Field="@nameof(UsuarioSet.UserName)" Caption="UserName" Editable Sortable="false" Displayable="true" />
-        <DataGridNumericColumn  Field="@nameof(UsuarioSet.Codigo)" Caption="Codigo" Editable Sortable="true" Displayable="true" />
+        <DataGridColumn  Field="@nameof(UsuarioSet.Codigo)" Caption="Codigo" Editable Sortable="false" Displayable="true" />
         <DataGridColumn  Field="@nameof(UsuarioSet.NivelAcceso)" Caption="Nivel" Editable Sortable="false" Displayable="true" />
         <DataGridColumn Field="@nameof(UsuarioSet.Password)" Caption="Password" Editable Sortable="false" Displayable="true" />
         <DataGridColumn Field="@nameof(UsuarioSet.email)" Caption="email" Editable Sortable="false" Displayable="true" />
