resuleto error cancel

--- a/BlazorEbi9EF/BlazorEbi9.WebAssembly/Pages/DetalleUsuario.razor
+++ b/BlazorEbi9EF/BlazorEbi9.WebAssembly/Pages/DetalleUsuario.razor
@@ -54,7 +54,8 @@
                 </div>
                
                 <button type="submit" class="btn btn-info" Style="margin-top:10px">Save</button>
-                <button type="submit" class="btn btn-info" onclick="Cancel" Style="margin-top:10px">Cancel</button>
+
+                <button type="submit" class="btn btn-info" @onclick="Cancel" Style="margin-top:10px">Cancel</button>
             </div>
             @if (displayValidationErrorMessages)
             {
