--- a/BlazorAppSecurity/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorAppSecurity/BlazorApp/Components/Layout/NavMenu.razor
@@ -32,7 +32,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weatherAPI">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> WeatherAPI(secure)
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> WeatherAPI
             </NavLink>
         </div>
 
