--- a/BlazorAppServerJavaScript2025/BlazorAppServerJavaScript2025/Components/_Imports.razor
+++ b/BlazorAppServerJavaScript2025/BlazorAppServerJavaScript2025/Components/_Imports.razor
@@ -6,6 +6,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorAppServer2025
-@using BlazorAppServer2025.Components
-@using Blazorise
+@using BlazorAppServerJavaScript2025
+@using BlazorAppServerJavaScript2025.Components
+
