--- a/BlazorAppServerJavaScript2025/BlazorAppServerJavaScript2025/wwwroot/app.css
+++ b/BlazorAppServerJavaScript2025/BlazorAppServerJavaScript2025/wwwroot/app.css
@@ -36,3 +36,7 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+.password {
+    -webkit-text-security: disc;
+    text-security: disc;
+}
